# compliant-social-bot

./: .env.example  .gitignore  MISSION03.md  MISSION_05.tmp  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: social-bot.service
deploy/termux/: BOOT.md  boot-start.sh  install-boot.sh  workerctl
docs/: .oauth-login-pr-marker  .pr-status  ASSET_LIBRARY.md  ASSET_PUBLISHING.md  DASHBOARD_QUEUE.md  HISTORY.md  PLATFORM_ADAPTERS.md  YOUTUBE_LOGIN.md
social_bot/: __init__.py  assets.py  assets_cli.py  assets_dashboard.py  cli.py  config.py  dashboard.py  dashboard_app.py  dashboard_control.py  db.py  history.py  jobs.py  main.py  observability.py  publishing.py  rate_limit.py  service.py  status.py  worker.py  workers.py  youtube_auth.py  youtube_dashboard_auth.py
social_bot/content/: __init__.py  persona.py
social_bot/media/: __init__.py  ffmpeg.py
tests/: test_analytics_cli.py  test_asset_publishing.py  test_assets.py  test_cli.py  test_continuous_worker.py  test_dashboard.py  test_history.py  test_observability.py  test_persona.py  test_platform_abstraction.py  test_publication_pipeline.py  test_scheduling.py  test_youtube_adapter.py  test_youtube_dashboard_auth.py
