[project]
name = "compliant-social-bot"
version = "0.1.0"
description = "Policy-compliant multi-platform social media automation framework"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
