[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliant-social-bot"
version = "0.1.0"
description = "Policy-compliant multi-platform social media automation framework"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "structlog>=24.2",
]

[project.scripts]
social-bot = "social_bot.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11"]
youtube = [
  "google-api-python-client>=2.140",
  "google-auth>=2.34",
  "google-auth-oauthlib>=1.2",
]

[tool.setuptools.packages.find]
include = ["social_bot*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
